k8s/infrastructure/ingress/traefik/command-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: command-ingress-traefik
  namespace: atlastickets
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: api.84.8.216.45.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: command-service
            port:
              number: 3000
